# multimodal-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SYSTEM_READY.md  main.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  test_gemini_models.py  test_ingestion_only.py  test_system.py
configs/: config.py
data/: sample_knowledge_graphs.txt  sample_rag_overview.txt  sample_vector_databases.txt
docs/evaluation/: EVALUATION_FRAMEWORK.md
docs/setup/: SETUP.md
infrastructure/docker/: docker-compose.yml
scripts/: add_logging.py  check_system_stats.py  ingest_sample_data.py  run_final_evaluation.py  run_simple_evaluation.py  test_ollama_quick.py
scripts/setup/: setup_docker.bat  setup_docker.sh
src/: main.py  pipeline.py
src/agents/: __init__.py  agent_router.py  base_agent.py  factual_agent.py  lookup_agent.py  reasoning_agent.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  test_suite.py
src/extraction/: __init__.py  cross_modal.py  entities.py  extractor.py
src/generation/: __init__.py  generator.py
src/ingestion/: __init__.py  audio_processor.py  base.py  chunker.py  image_processor.py  pdf_processor.py  pipeline.py  text_processor.py
src/retrieval/: __init__.py  hybrid_search.py  query_expander.py  (+1 more)
tests/: evaluation_test_cases.py  quick_agent_verify.py  quick_test.py  run_evaluation.py  test_agents.py  test_agents_quick.py  test_expansion_simple.py  test_ingestion_only.py  test_query_expansion.py  test_system.py  verify_agents_working.py
(+6 files in other folders)
