[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-rag"
version = "1.0.0"
description = "Enterprise Multimodal RAG System with Knowledge Graphs"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Kevin Xu", email = "xuk654@gmail.com" }
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

test = [
    "pytest>=7.4.0",
    "deepeval>=0.20.90",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
